@@ -1,7 +1,6 @@
 package seedu.mark.ui;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import javafx.fxml.FXML;
 import javafx.scene.control.Label;
@@ -20,7 +19,7 @@ public class StatusBarFooter extends UiPart<Region> {
 
     public StatusBarFooter(Path saveLocation) {
         super(FXML);
-        saveLocationStatus.setText(Paths.get(".").resolve(saveLocation).toString());
+        saveLocationStatus.setText(Path.of(".").resolve(saveLocation).toString());
     }
 
 }
